--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a id="nombre" class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -85,7 +85,8 @@
     </main>
 
     <section>
-        
+        <h4 id="titulo" class="falls">GRAVITY FALLS</h4>
+        <img src="img/gravityfalls.jpg" alt="foto" id="fotogravityfalls">
     </section>
 
     <footer>
