se crean funciones

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
     <footer>
         
     </footer>
+
+    <h4 id="titulo2">OELO</h4>
+    <button type="button" class="btn btn-info" id="boton">clic</button>
     
     <script src="js/llenadoTienda.js"></script>
 
